syntax = "proto3";
option go_package = "proto";
package proto;
import "common.proto";
import "request_response.proto";

// merchant service API
service MerchantService {
	// creates a merchant account
	rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);

	// updates a merchant account
	rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse);

	// delete a merchant account
	rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);

	// get a merchant account
	rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);

	// get a set of merchant accounts
	rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);
}
